# covid-19-api

./: .gitignore  Pipfile  README.md  add_tags.py  app.py  conf.py  config.example.json  constants.py  cron.py  database.py  db_handler.py  index.cgi  log_handler.py  meta_data_handler.py  pyproject.toml  slack_handler.py  sources.py  stats.py  twitter_handler.py  util.py
.github/workflows/: check-style.yml  deploy-staging.yml  deploy.yml  release-pr.yml
data/: meta.en.json  meta.json
handlers/: __init__.py  db_handler.py  log_handler.py  meta_data_handler.py  twitter_handler.py
